# ClawSeries

./: .gitignore  AGENTS.md  API.md  README.md  pyproject.toml  start.sh
backend/: README.md  config.py  main.py  models.py  prompt_reference.py  requirements.txt
backend/checkpoint/: __init__.py  sqlite_saver.py
backend/graphs/: __init__.py  production_graph.py  state.py
backend/graphs/nodes/: __init__.py  assets.py  compose.py  format.py  script.py  (+1 more)
backend/integrations/: chroma.py  demucs_sep.py  ffmpeg.py  image.py  llm.py  subtitle.py  video.py  voxcpm_tts.py  whisperx.py  whisperx_stt.py
backend/repositories/: __init__.py  agent_repo.py  conversation_repo.py  production_event_repo.py  project_repo.py  settings_repo.py  shot_repo.py  task_repo.py
backend/routers/: agents.py  conversations.py  dubbing.py  episodes.py  execution.py  execution_langgraph.py  projects.py  settings.py  stream.py  system.py  websocket.py
backend/services/: agent_service.py  conversation_service.py  dubbing_service.py  episode_service.py  project_service.py  system_service.py
backend/storage/: db.py
backend/workers/: task_worker.py
docs/: CNAME  index.html  styles.css
frontend/: index.html
frontend/css/: chat.css  components.css  dubbing.css  layout.css  material-symbols-outlined.css  project.css  reset.css  settings.css  variables.css
frontend/js/: api.js  app.js  chat.js  dubbing.js  i18n.js  mock-data.js  project.js  settings.js  video.js
ppt/: ClawSeries-en.pptx  ClawSeries.pptx  generate-pptx-en.js  generate-pptx.js  index.html  style.css
website/: index.html
(+2 files in other folders)
