[project]
name = "clawseries"
version = "0.1.0"
description = "AI短剧自动化制片平台"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.3",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "sse-starlette>=3.3.4",
    "httpx>=0.27.0",
    "google-genai>=1.0.0",
    "chromadb>=0.4.0",
    "langgraph>=0.4.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langchain-core>=0.3.0",
    "whisperx",
    "demucs",
    "voxcpm @ git+https://github.com/blu-sharky/VoxCPM-modified.git",
    "soundfile",
    "librosa",
    "ffmpeg-python",
    "audiostretchy>=1.3.5",
]
